# resend-cli

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  setup.py
resend_cli/: __init__.py  cli.py  client.py  config.py  formatters.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py
