[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resend-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["click>=8.0", "requests>=2.28", "rich>=13.0"]

[project.scripts]
resend-cli = "resend_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
